@@ -1,6 +1,6 @@
 #!/bin/sh
 set -x
-#libtoolize --force --copy
+libtoolize --force --copy
 aclocal -I ./m4
 autoheader
 automake --foreign --add-missing --copy
